--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,8 +25,8 @@ android {
         applicationId "com.xpense.android"
         minSdkVersion rootProject.minSdkVersion
         targetSdkVersion rootProject.targetSdkVersion
-        versionCode 43
-        versionName "0.41.0"
+        versionCode 44
+        versionName "0.42.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         buildConfigField ("String", "MAPS_API_KEY", getMapsApiKey())
     }
@@ -120,7 +120,7 @@ dependencies {
     // Tooling support (Previews, etc.)
     implementation "androidx.compose.ui:ui-tooling:$version_compose_ui_tooling"
     // Integration with ViewModels
-    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:$version_compose_lifecycle_viewmodel"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:$version_lifecycle"
     // Runtime livedata
 //    implementation "androidx.compose.runtime:runtime-livedata:$version_compose_runtime_livedata"
     // When using a MDC theme
@@ -129,6 +129,8 @@ dependencies {
 //    implementation "com.google.accompanist:accompanist-appcompat-theme:0.16.0"
     // When using a MDC theme
     implementation "com.google.android.material:compose-theme-adapter:$version_compose_material_theme_adapter"
+    // Material icons
+    implementation "androidx.compose.material:material-icons-extended:$version_compose_material"
 
     // Maps
     implementation "com.google.android.gms:play-services-maps:$version_maps"
