--- a/build.gradle
+++ b/build.gradle
@@ -40,9 +40,9 @@ ext {
     version_compose = '1.2.0-alpha01'
     version_compose_activity = '1.4.0'
     version_compose_animation = '1.1.1'
-    version_compose_lifecycle_viewmodel = '2.5.0-alpha06'
+//    version_compose_lifecycle_viewmodel = '2.5.0-beta01'
     version_compose_material = '1.1.1'
-    version_compose_material_theme_adapter = '1.1.6'
+    version_compose_material_theme_adapter = '1.1.7'
     version_compose_runtime_livedata = '1.0.0-beta01'
     version_compose_ui_test_junit4 = '1.1.1'
     version_compose_ui_tooling = '1.1.1'
@@ -56,7 +56,7 @@ ext {
     version_fragment = '1.4.1'
     version_hamcrest = '1.3'
     version_junit = '4.13.2'
-    version_lifecycle = '2.5.0-alpha06'
+    version_lifecycle = '2.5.0-beta01'
     version_maps = '18.0.2'
     version_material = '1.5.0'
     version_mockito = '3.1.0'
