--- a/settings.gradle
+++ b/settings.gradle
@@ -5,5 +5,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "xpense"
+rootProject.name = "experiments"
 include ':app'
